refactor: renamed layout to index

--- a/internal/views/index.templ
+++ b/internal/views/index.templ
@@ -1,12 +1,12 @@
 package views
 
-templ Layout() {
+templ Index() {
 	<!DOCTYPE html>
 	<html lang="en">
 		<head>
 			<meta charset="UTF-8"/>
 			<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-			<title>My App</title>
+			<title>HTA Stack App</title>
 			<script src="https://unpkg.com/htmx.org@latest"></script>
 			<script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
 		</head>
